<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 仅“首页”和“我”可点击，其余为占位 -->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/nav_friends" />
    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_camera" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message"
        android:title="@string/nav_messages" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
